fix overflow in mobile nav

--- a/assets/scss/components/_nav.scss
+++ b/assets/scss/components/_nav.scss
@@ -109,6 +109,9 @@ body {
   z-index: 20;
   box-sizing: border-box;
   padding-bottom: 30px;
+  max-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   &.hidden {
     display: none;
